V2.5.0.beta
 - added search features to most modules
 - added the Employees module (backend-wise all CRUD methods defined, front-end has not been built for all methods)
 - updated swagger documentation
 - added some methods for salary calculus
 - visual changes

All bugs and missing stuff will be solved in v2.5.1
